fixed crew img & heading alignments

--- a/src/pages/Crew.css
+++ b/src/pages/Crew.css
@@ -100,15 +100,16 @@
   .crew .wrapper {
     min-height: calc(100vh - 96px);
     display: grid;
-    grid-template-columns: minmax(1rem, 2.25rem) repeat(1, minmax(0, 45rem)) minmax(1rem, 2.25rem);
-    grid-template-rows: 100px 300px 10px 500px;
-    place-content: end center;
+    grid-template-columns: minmax(1rem, 39px) 1fr minmax(1rem, 39px);
+    grid-template-rows: 100px 300px 30px 500px;
+    place-content: start center;
   }
 
   .crew .crew-title {
     grid-row: 1/2;
     grid-column: 2/3;
     margin: 0;
+    margin-top: 1.7rem;
     font-size: 20px;
     line-height: 24px;
     letter-spacing: 3.375px;
@@ -161,8 +162,8 @@
   }
 
   .crew .crew-img {
-    width: 456px;
-    height: 500px;
+    max-width: 456px;
+    height: 475px;
     margin: 0;
   }
 }
@@ -178,10 +179,10 @@
   .crew .wrapper {
     min-height: calc(100vh - 132px);
     display: grid;
-    grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(1rem, 1fr);
+    grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, calc(32.222rem + 5%))) minmax(1rem, 1fr);
     grid-template-rows: 100px 428px 240px; 
     column-gap: 5%;
-    place-content: center;
+    place-content: center center;
 
   }
 
